<resources>
    <string name="stripe_key">pk_live_yznvW6gk5pOz4sFb3aEZsjuN00DuvfJqPo</string>
    <string name="add_car">Add Car</string>
    <string name="enter_vehicle">Enter Vehicle No.</string>
    <string name="vehicle_colour">Vehicle colour</string>
    <string name="seats">Seat(s)</string>
    <string name="select_number_plate">Select Number Plate Image</string>
    <string name="select_car_image">Select Car Image</string>
    <string name="add">Add</string>
    <string name="stops">Stops</string>
    <string name="instructions">Instruction</string>
    <string name="continuee">Continue</string>
    <string name="price_calculation">Price Calculation</string>
    <string name="add_new">Add New</string>
    <string name="delete_card">Delete Card</string>
    <string name="are_you_sure_you_want_to_delete_card_">Are you sure you want to delete this card</string>
    <string name="are_you_sure">Are You Sure</string>
    <string name="click_ok_to_redeem_card">Click Ok to add money in you wallet or cancel the transaction.</string>
    <string name="select_language">Select Language</string>
    <string name="enter_departure">Please Enter Departure</string>
    <string name="enter_drop">Please Enter Drop</string>
    <string name="enter_seats">Please Enter Seat(s)</string>
    <string name="select_date_time">Please select Date and Time</string>
    <string name="cancel_by_driver">Cancelled By Driver</string>
    <string name="ride_id_">RIDE ID:</string>
    <string name="rejected">Rejected</string>
    <string name="please_give_rating">Please Give Rating</string>
    <string name="comments">Comments</string>
    <string name="done">Done</string>
    <string name="reason_for_cancellation">Reason for Cancellation</string>
    <string name="other">Other</string>
    <string name="ac">AC</string>
    <string name="cash_also">CASH ALSO</string>
    <string name="find_a_ride">Find a Ride</string>
    <string name="drive">Drive</string>
    <string name="make_default">Make Default</string>
    <string name="call">Call</string>
    <string name="message">Message</string>
    <string name="delete">Delete</string>
    <string name="go_come_safely">Come &amp; Go Safely</string>
    <string name="bank_account">Bank Account Details</string>
    <string name="saving">Saving</string>
    <string name="current">Current</string>
    <string name="recurring">Recurring</string>
    <string name="account_number">Account Number*</string>
    <string name="enter_account_number">Enter Account Number</string>
    <string name="account_holder_name">Account Holder Name*</string>
    <string name="enter_holder_name">Enter Holder Name</string>
    <string name="swift_code">Swift BIC Code</string>
    <string name="enter_swift_code">Enter Swift Code</string>
    <string name="iban_number">IBAN Number</string>
    <string name="enter_iban_number">Enter IBAN number</string>
    <string name="bank_name">Bank Name*</string>
    <string name="enter_bank_name">Enter Bank Name</string>
    <string name="bank_institution_number">Bank Institution Number</string>
    <string name="enter_bank_institution_number">Enter Bank Institution Number</string>
    <string name="routing_number">Routing Number</string>
    <string name="enter_routing_number">Enter Routing Number</string>
    <string name="bank_address">Bank Address*</string>
    <string name="enter_bank_address">Enter Bank Address</string>
    <string name="save">Save</string>
    <string name="booking_request">Booking Request</string>
    <string name="phone_verified">Phone Verified</string>
    <string name="online_payment">Online Payment</string>
    <string name="reject">Reject</string>
    <string name="accept">Accept</string>
    <string name="card_list">Card List</string>
    <string name="change_car">Change Car</string>
    <string name="confirmation">Confirmation</string>
    <string name="departure">Departure</string>
    <string name="only_female">Only Females</string>
    <string name="ac_car">AC Car</string>
    <string name="support_you_may_contact">You may contact us by below means:</string>
    <string name="call_us">Call us</string>
    <string name="whatsapp_us">Whatsapp us</string>
    <string name="mail_us">Mail us</string>
    <string name="per_seat">per seat</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="enter_DOB">Select DOB</string>
    <string name="submit">Submit</string>
    <string name="CARDACTIVITY_add_card">Add Card</string>
    <string name="or">OR</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="enter_expiry_date">Enter Expiry date</string>
    <string name="document_number">Document No.</string>
    <string name="current_balance">Current Balance</string>
    <string name="view_all_payouts">View all Payouts</string>
    <string name="add_money_to_wallet">Add Money to Wallet</string>
    <string name="withdrawal">Withdrawal</string>
    <string name="select_pick_point">Select Pick Point</string>
    <string name="select_drop_point">Select Drop Point</string>
    <string name="no_vehicle_added">No Vehicle Added</string>
    <string name="seat">Seat(s)</string>
    <string name="departure_">Departure :</string>
    <string name="select_date">Select Date</string>
    <string name="your_fav_places">Your Favorite Places</string>
    <string name="choose_from_maps">Choose from Maps</string>
    <string name="select_payment_method">Select Payment Method</string>
    <string name="options">Options</string>
    <string name="ongoing_rides">Ongoing Rides</string>
    <string name="upcoming_rides">Upcoming Rides</string>
    <string name="no_rides_available">No Rides Available</string>
    <string name="email_address">Email Address</string>
    <string name="vehicles">Vehicles</string>
    <string name="drop">Drop</string>
    <string name="total_price">Total Price</string>
    <string name="sign_up">Sign Up</string>
    <string name="referral_code">Referral Code</string>
    <string name="by_signing_up">By signing up you agreed all</string>
    <string name="terms_and_condition">Terms and Conditions</string>
    <string name="of_goviens">of GoViens</string>
    <string name="otp_">OTP : </string>
    <string name="navigation_to_destination">Navigation to Destination</string>
    <string name="end_ride">End Ride</string>
    <string name="transactions">Transactions</string>
    <string name="upload_documennt">Upload Documents</string>
    <string name="please_upload_vehicle_before_documents">Please Upload Vehicle before Documents</string>
    <string name="invalid_time">Invalid Time</string>
    <string name="enter_model_name">Enter Model Name</string>
    <string name="my_wallet">My Wallet</string>
    <string name="addresses">Addresses</string>
    <string name="documents">Documents</string>
    <string name="bank_details">Bank Details</string>
    <string name="customer_care">Customer Care</string>
    <string name="logout">Logout</string>
    <string name="please_fill_the_entire_field">Please fill the entire field</string>
    <string name="start_ride">Start Ride</string>
    <string name="continue_ride">Continue Ride</string>
    <string name="pending_ride_request">Pending ride Requests: please Accept or Reject pending Requests before Starting the ride</string>
    <string name="cancellation_fee">cancellation fee will be apply if you cancel this Ride.</string>
    <string name="awaiting_confirmation">Awaiting Confirmation</string>
    <string name="goviens_proposed_price">GoViens Proposed Price</string>
    <string name="your_price">Your Price</string>
    <string name="login">Login</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="PIN_message">Check your SMS message. We have sent you the PIN at </string>
    <string name="resend_otp">Resend OTP</string>
    <string name="verify">Verify</string>
    <string name="search_hint">Search</string>
    <string name="pin_message">We will send you a 4 digit PIN for verification process</string>
    <string name="send_otp">Send OTP</string>
    <string name="ride_details">Ride Details</string>
    <string name="view_receipt">View Receipt</string>
    <string name="driver">Driver</string>
    <string name="total_seats">Total Seat(s)</string>
    <string name="requests">Requests</string>
    <string name="riders">Riders</string>
    <string name="past_rides">Past Rides</string>
    <string name="passenger">Passenger</string>
    <string name="otp">OTP : </string>
    <string name="your_seats">Your Seat(s)</string>
    <string name="to">To</string>
    <string name="view_profile">View Profile</string>
    <string name="other_riders">Other Riders</string>
    <string name="cancel_reason">Cancellation Reason</string>
    <string name="rate_driver">Rate Driver</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="radius">Radius (KM)</string>
    <string name="apply">Apply</string>
    <string name="confirmed">Confirmed</string>
    <string name="auto_cancel">Auto Cancelled</string>
    <string name="pending_for_verification">Pending for Verification</string>
    <string name="payment_method">Payment Method</string>
    <string name="book_and_pay_now">Book and Pay Now</string>
    <string name="goviens_wallet">using GoViens Wallet</string>
    <string name="balance">Balance: </string>
    <string name="cash_at_pickup_point">Cash at Pickup Point</string>
    <string name="confirmation_message">By using this method your seat(s) will be book but not GET CONFIRMED</string>
    <string name="book_and_pay_wallet">Book and Pay at Pickup Point using Wallet</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="no_records">No Records Found</string>
    <string name="upload_all_doc">Please Upload all Documents</string>
    <string name="document_verified">Document Verified Already</string>
    <string name="whatsapp_not_installed">WhatsApp not Installed</string>
    <string name="find_ride">Find Ride</string>
    <string name="rides">Rides</string>
    <string name="offer_ride">Offer Ride</string>
    <string name="profile">Profile</string>
    <string name="cancelled">Cancelled</string>
    <string name="cancel_by_user">Cancelled by User</string>
    <string name="taken_rides">Taken Rides</string>
    <string name="offer_rides">Offered Rides</string>
    <string name="wallet">Wallet</string>
    <string name="wallet_at_pickup">Wallet at Pick-up</string>
    <string name="paid_by_wallet">Paid by Wallet</string>
    <string name="cash">Cash</string>
    <string name="balance_">Balance:</string>
    <string name="please_select_any_payment_method">Please Select any Payment Method</string>
    <string name="add_money_in_your_bank">Add Money in Your Bank</string>
    <string name="please_enter_amount">Please Enter Amount</string>
    <string name="please_enter_mobile_number">Please Enter Mobile Number</string>
    <string name="please_select_operator">Please Select Operator</string>
    <string name="please_enter_minimum">Please Enter Minimum</string>
    <string name="please_enter_maximum">Please Enter Maximum</string>
    <string name="payment_failed">Payment Failed</string>
    <string name="payment_successful">Payment Successful</string>
    <string name="booked">Booked</string>
    <string name="completed">Completed</string>
    <string name="ongoing">Ongoing</string>
    <string name="please_specify_reason">Please Specify Reason</string>
    <string name="select_payment_option">Select Payment Option</string>
    <string name="paypal">Paypal</string>
    <string name="credit_or_debit_card">Credit or Debit Card</string>
    <string name="monetbil_payment">Mobile payment</string>
    <string name="intouch_payment">Mobile payment</string>
    <string name="bank_transfer">Bank Transfer</string>
</resources>