<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.BankAccountActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/linear"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/back_arrow"
            android:id="@+id/img_back"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="25dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="15dp"
            android:fontFamily=""
            android:text="@string/bank_account"
            android:textColor="@color/colorWhite"
            android:textSize="16dp"
            app:fontFamily="@font/poppins" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/linear"
        android:layout_marginBottom="100dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="vertical">

            <Spinner
                android:id="@+id/accounttype_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:paddingTop="10dp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorPrimaryDark"
                android:layout_marginTop="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:text="@string/account_number"
                android:layout_marginTop="10dp"
                android:textColor="@color/colorLightGrey"
                android:fontFamily="@font/poppins_medium"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:hint="@string/enter_account_number"
                android:id="@+id/et_account_no"
                android:inputType="number"
                android:textColor="@color/colorBlack"
                android:fontFamily="@font/poppins_medium"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:text="@string/account_holder_name"
                android:layout_marginTop="10dp"
                android:textColor="@color/colorLightGrey"
                android:fontFamily="@font/poppins_medium"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:hint="@string/enter_holder_name"
                android:id="@+id/et_account_name"
                android:textColor="@color/colorBlack"
                android:fontFamily="@font/poppins_medium"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:text="@string/swift_code"
                android:layout_marginTop="10dp"
                android:textColor="@color/colorLightGrey"
                android:fontFamily="@font/poppins_medium"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:id="@+id/et_swift_code"
                android:hint="@string/enter_swift_code"
                android:textColor="@color/colorBlack"
                android:fontFamily="@font/poppins_medium"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:text="@string/iban_number"
                android:layout_marginTop="10dp"
                android:textColor="@color/colorLightGrey"
                android:fontFamily="@font/poppins_medium"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:id="@+id/et_iban_number"
                android:hint="@string/enter_iban_number"
                android:textColor="@color/colorBlack"
                android:fontFamily="@font/poppins_medium"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:text="@string/bank_name"
                android:layout_marginTop="10dp"
                android:textColor="@color/colorLightGrey"
                android:fontFamily="@font/poppins_medium"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:hint="@string/enter_bank_name"
                android:id="@+id/et_bank_name"
                android:textColor="@color/colorBlack"
                android:fontFamily="@font/poppins_medium"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:text="@string/bank_institution_number"
                android:layout_marginTop="10dp"
                android:textColor="@color/colorLightGrey"
                android:fontFamily="@font/poppins_medium"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:hint="@string/enter_bank_institution_number"
                android:id="@+id/et_bank_institution_no"
                android:inputType="number"
                android:textColor="@color/colorBlack"
                android:fontFamily="@font/poppins_medium"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:text="@string/routing_number"
                android:layout_marginTop="10dp"
                android:textColor="@color/colorLightGrey"
                android:fontFamily="@font/poppins_medium"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:hint="@string/enter_routing_number"
                android:id="@+id/et_routing_number"
                android:inputType="number"
                android:textColor="@color/colorBlack"
                android:fontFamily="@font/poppins_medium"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:text="@string/bank_address"
                android:layout_marginTop="10dp"
                android:textColor="@color/colorLightGrey"
                android:fontFamily="@font/poppins_medium"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:hint="@string/enter_bank_address"
                android:id="@+id/et_bank_address"
                android:inputType="textPostalAddress"
                android:textColor="@color/colorBlack"
                android:fontFamily="@font/poppins_medium"/>

        </LinearLayout>

    </ScrollView>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="90dp"
        android:layout_alignParentBottom="true"
        android:background="@color/colorLightGrey"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="15dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:text="@string/save"
        android:id="@+id/btn_save"
        android:layout_alignParentBottom="true"
        android:textColor="@color/colorWhite"
        android:textAllCaps="false"
        android:textSize="16dp"
        android:fontFamily="@font/poppins_medium"
        android:background="@drawable/btn_bg"/>

</RelativeLayout>