<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.PaymentMethodActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/linear"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/back_arrow"
            android:id="@+id/img_back"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="25dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="15dp"
            android:fontFamily=""
            android:text="@string/payment_method"
            android:textColor="@color/colorWhite"
            android:textSize="16dp"
            app:fontFamily="@font/poppins" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="90dp"
        android:orientation="vertical"
        android:layout_below="@id/linear">

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:id="@+id/radio_wallet"
                android:text="@string/book_and_pay_now"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/goviens_wallet"
                android:layout_marginStart="35dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/balance"
                android:id="@+id/tv_balance"
                android:layout_marginTop="5dp"
                android:layout_marginStart="35dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:layout_alignParentBottom="true"
                android:background="@color/colorLightGrey"/>

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_marginTop="10dp"
                android:id="@+id/radio_cash"
                android:text="@string/cash_at_pickup_point"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirmation_message"
                android:layout_marginStart="35dp"
                android:id="@+id/tv_cash_text"
                android:layout_marginEnd="35dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:id="@+id/view"
                android:layout_alignParentBottom="true"
                android:background="@color/colorLightGrey"/>

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_marginTop="10dp"
                android:id="@+id/radio_wallet_at_pickup"
                android:text="@string/book_and_pay_wallet"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirmation_message"
                android:layout_marginStart="35dp"
                android:id="@+id/tv_text"
                android:layout_marginEnd="35dp"/>
        </RadioGroup>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="80dp"
        android:layout_alignParentBottom="true"
        android:background="@color/colorLightGrey"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_weight="1"
        android:text="@string/save"
        android:textColor="@color/colorWhite"
        android:textAllCaps="false"
        android:textSize="14dp"
        android:id="@+id/btn_continue"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="15dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="@font/poppins_medium"
        android:background="@drawable/bg_primary_color"/>


</RelativeLayout>