<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.PaymentOptionsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/linear"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/back_arrow"
            android:id="@+id/img_back"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="25dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="15dp"
            android:fontFamily=""
            android:text="@string/select_payment_option"
            android:textColor="@color/colorWhite"
            android:textSize="16dp"
            app:fontFamily="@font/poppins" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:visibility="gone"
        android:id="@+id/relative_paypal"
        android:background="@drawable/bg_primary_color"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/paypal"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="18dp"
            android:layout_centerInParent="true"
            android:fontFamily="@font/poppins_medium"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:visibility="gone"
        android:id="@+id/relative_stripe"
        android:background="@drawable/bg_primary_color"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/credit_or_debit_card"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="18dp"
            android:layout_centerInParent="true"
            android:fontFamily="@font/poppins_medium"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:visibility="gone"
        android:id="@+id/relative_monet"
        android:background="@drawable/bg_primary_color"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/monetbil_payment"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="18dp"
            android:layout_centerInParent="true"
            android:fontFamily="@font/poppins_medium"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:visibility="gone"
        android:id="@+id/relative_intouch"
        android:background="@drawable/bg_primary_color"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/intouch_payment"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="18dp"
            android:layout_centerInParent="true"
            android:fontFamily="@font/poppins_medium"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:visibility="gone"
        android:id="@+id/relative_bank_transfer"
        android:background="@drawable/bg_primary_color"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bank_transfer"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="18dp"
            android:layout_centerInParent="true"
            android:fontFamily="@font/poppins_medium"/>

    </RelativeLayout>

</LinearLayout>
