<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.OfferedRideFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_rides_available"
        android:gravity="center"
        android:textColor="@color/quantum_grey500"
        android:fontFamily="@font/poppins_medium"
        android:textSize="18dp"
        android:layout_centerInParent="true"
        android:id="@+id/tv_no_ride"
        android:layout_gravity="center"/>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:id="@+id/tv_ongoing_ride"
                android:text="@string/ongoing_rides"
                android:layout_marginTop="15dp"/>


            <com.mindorks.placeholderview.PlaceHolderView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:id="@+id/placeHolder_ongoing"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:text="@string/upcoming_rides"
                android:id="@+id/tv_upcoming_ride"
                android:layout_marginTop="15dp"/>


            <com.mindorks.placeholderview.PlaceHolderView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:id="@+id/placeHolder_upcoming"/>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</RelativeLayout>